# deprojpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
deprojpy/: __init__.py  cli.py  core.py  diagnostics.py  geometry.py  heightmap.py  io.py  labels.py  mask.py  models.py  objects.py  plotting.py  surface_distance.py
deprojpy/surface_distance/: __init__.py  _api.py  _boundary_surface.py  _calculator.py  _graph.py  _helpers.py  _straight.py
docs/: cookbook.md
examples/: 01_run_sample.py  02_plot_gallery.py  03_run_labeled_sample.py  04_label_plots.py  05_surface_distances.py
samples/: Labels-2.tif
tests/: conftest.py  test_core.py  test_examples.py  test_geometry.py  test_labels.py  test_mask_to_objects.py  test_sample_smoke.py  test_surface_distance.py
