[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "deprojpy"
version = "0.1.0"
description = "Python behavioral core port of the DeProj MATLAB toolbox"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-image>=0.21",
  "pandas>=2.0",
  "networkx>=3.0",
  "tifffile>=2023.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7"]
dev = ["pytest>=7", "ruff>=0.5"]
labels = []

[project.scripts]
deprojpy-smoke = "deprojpy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deprojpy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
